--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.4",
     "daisyui": "^5.0.30",
+    "framer-motion": "^12.16.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.5.3"
