--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "daisyui": "^5.0.30",
     "framer-motion": "^12.16.0",
     "react": "^18.2.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.5.3"
   },
