--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.1.4",
     "daisyui": "^5.0.30",
     "framer-motion": "^12.16.0",
