--- a/package.json
+++ b/package.json
@@ -24,16 +24,16 @@
     "format": "prettier --write ."
   },
   "dependencies": {
-  "@tailwindcss/vite": "^4.1.4",
-  "daisyui": "^5.0.30",
-  "react": "^19.0.0",
-  "react-countup": "^6.5.3",
-  "react-dom": "^19.0.0",
-  "react-router-dom": "^7.5.3",
-  "tailwindcss": "^4.1.4",
-  "framer-motion": "^1.2.3"
-},
-
+    "@heroicons/react": "^2.2.0",
+    "@tailwindcss/vite": "^4.1.4",
+    "daisyui": "^5.0.30",
+    "framer-motion": "^12.16.0",
+    "react": "^19.0.0",
+    "react-countup": "^6.5.3",
+    "react-dom": "^19.0.0",
+    "react-router-dom": "^7.5.3",
+    "tailwindcss": "^4.1.4"
+  },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
     "@types/react": "^18.2.56",
