--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.1.4",
+    "axios": "^1.9.0",
     "daisyui": "^5.0.30",
     "framer-motion": "^12.16.0",
     "react": "^19.0.0",
