--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "globals": "^16.0.0",
     "postcss": "^8.5.4",
     "prettier": "^3.2.5",
+    "rollup": "^4.42.0",
     "tailwindcss": "^4.1.8",
     "vite": "^6.3.1"
   }
